# TenhouAPI

./: README.md  pyproject.toml
src/TenhouAPI/config/: __init__.py  game_id.py  game_log_tag.py  manager.py  tenhou_url.py
src/TenhouAPI/game_id/: __init__.py  download.py  extract.py  manager.py
src/TenhouAPI/game_log/: __init__.py  download.py  manager.py  parse.py
src/TenhouAPI/util/: config.py  directory_manager.py  download.py  parse.py  repr.py  zip.py
tests/: __init__.py
tests/game_id/: manager.py
tests/game_log/: manager.py  parser.py
tests/util/: download.py  parser.py  util.py
