[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'TenhouAPI'
version = '0.1.17'
description = 'A library for downloading game logs from the web mahjong game "Tenhou" and extracting data.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.13'
dependencies = [
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: Jamanese',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
'Homepage' = 'https://github.com/AtoKashinoki/TenhouAPI'
'Bug Traker' = 'https://github.com/AtoKashinoki/TenhouAPI/issues'
'Documentation' = 'https://github.com/AtoKashinoki/TenhouAPI'
'Source' = 'https://github.com/AtoKashinoki/TenhouAPI.git'


[project.scripts]
